--- a/styles/stlye.css
+++ b/styles/stlye.css
@@ -1,7 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
-
 body {
-    font-family: 'Permanent Marker', cursive;
+    font-family: "MS Gothic", "Noto Sans JP", sans-serif;
     margin: 0;
     padding: 0;
     background-color: #000000;
