--- a/styles/stlye.css
+++ b/styles/stlye.css
@@ -136,4 +136,15 @@ td img {
     border-radius: 4px;
 }
 
+a {
+  color: black; 
+
+a:visited {
+  color: purple; 
+}
+
+a:hover {
+  text-decoration: underline; 
+}
+
 
