--- a/styles/style.css
+++ b/styles/style.css
@@ -103,6 +103,17 @@ textarea {
     box-sizing: border-box; /* Garante que o padding não afeta a largura total */
 }
 
+input[type="text"],
+input[type="cpf"],
+textarea {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box; /* Garante que o padding não afeta a largura total */
+}
+
 button {
     background-color: #0400ff;
     color: black;
@@ -135,3 +146,34 @@ thead {
 td img {
     border-radius: 5px;
 }
+
+/* NOVO: Classe para o tema escuro */ 
+
+.tema-escuro { 
+
+  background-color: #121212 !important; /* !important garante que sobrescreve o CSS do body */ 
+
+  color: #f0f0f0; 
+
+} 
+
+ 
+
+.tema-escuro header, .tema-escuro footer { 
+
+  background-color: #000; 
+
+} 
+
+ 
+
+.tema-escuro main { 
+
+  background-color: #2c2c2c; 
+
+  color: #f0f0f0; 
+
+  box-shadow: 0 0 15px rgba(255, 255, 255, 0.2); 
+
+} 
+
