Alteração no css dos botões

--- a/styles/style.css
+++ b/styles/style.css
@@ -121,10 +121,12 @@ button {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
 button:hover {
-    background-color: #575757;
+    background-color: #12115e;
+    transform: scale(1.05);
 }
 
 #tabela {
@@ -200,7 +202,7 @@ td img {
 }
 
 .tema-claro button:hover {
-  background-color: #2f2fff;
+  background-color: #12115e;
   transform: scale(1.05);
 }
 
