--- a/styles/style.css
+++ b/styles/style.css
@@ -117,6 +117,7 @@ textarea {
 button {
     background-color: #0400ff;
     color: black;
+    font-weight: bold;
     padding: 10px 15px;
     border: none;
     border-radius: 4px;
@@ -194,8 +195,9 @@ td img {
 .tema-claro button {
   background-color: #0400ff;
   color: white;
-  border: none;
+  font-weight: bold;
   padding: 10px 15px;
+  border: none;
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.2s ease;
