--- a/styles/style.css
+++ b/styles/style.css
@@ -153,7 +153,7 @@ td img {
 /* NOVO: Classe para o tema claro */
 
 .tema-claro {
-  background-color: #f9f9fb !important; /* Fundo claro e neutro */
+  background-color: #c8c7ff !important; /* Fundo claro e neutro */
   color: #1a1a1a; /* Texto escuro para contraste */
 }
 
