Alteração de cores

--- a/styles/style.css
+++ b/styles/style.css
@@ -186,7 +186,7 @@ td img {
 }
 
 .tema-claro main {
-  background-color: #c8c7ff;
+  background-color: #ffffff;
   color: #1a1a1a;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
   border: 1px solid #e5e5e5;
