--- a/styles/style.css
+++ b/styles/style.css
@@ -181,7 +181,7 @@ td img {
 }
 
 .tema-claro nav a:hover {
-  background-color: #4d4dfc;
+  background-color: #0400ff;
   color: #ffffff;
 }
 
@@ -195,7 +195,7 @@ td img {
 .tema-claro button {
   background-color: #0400ff;
   color: white;
-  font-weight: bold;
+  font-weight: bolder;
   padding: 10px 15px;
   border: none;
   border-radius: 4px;
