--- a/styles/style.css
+++ b/styles/style.css
@@ -117,7 +117,8 @@ textarea {
 button {
     background-color: #0400ff;
     color: black;
-    font-weight: bold;
+    font-family: "Audiowide", sans-serif;
+    font-weight: bolder;
     padding: 10px 15px;
     border: none;
     border-radius: 4px;
@@ -195,6 +196,7 @@ td img {
 .tema-claro button {
   background-color: #0400ff;
   color: white;
+  font-family: "Audiowide", sans-serif;
   font-weight: bolder;
   padding: 10px 15px;
   border: none;
